# tradingbot

./: .env.example  .gitignore  PHASE3_HANDOFF.md  README.md  backtest_simulation.py  main.py  pyproject.toml  requirements.txt
logs/: .gitkeep
research/: STRATEGY_REVIEW.md
runtime/: .gitkeep
scripts/: mock_flash_crash.py  replay_simulator.py
src/: main.py
src/communication/: __init__.py  discord_client.py
src/config/: __init__.py  constants.py  logging_config.py  settings.py  strategy_runtime.py
src/core/: __init__.py  account.py  alpaca_clients.py  database.py  exceptions.py  market_clock.py  market_data.py  (+7 more)
tests/: conftest.py  stress_test_flash_crash.py  stress_test_recovery.py  test_anti_martingale_sizing.py  test_autotune.py  test_backtest_simulation.py  test_backtester.py  test_canary.py  test_compliance.py  test_dashboard_helpers.py  test_dashboard_replay_loaders.py  test_dashboard_watchlist_helpers.py  test_database.py  test_discord_bot.py  test_discord_command_center.py  test_ensemble.py  test_filters.py  test_heartbeat_tearsheet.py  test_kelly_sizer_core.py  test_kelly_sizing.py  test_killswitch.py  test_local_health.py  test_ml_filter.py  test_orchestrator_sector_limit.py  test_orchestrator_stale_bars.py  test_passive_joiner.py  test_performance_weights.py  test_phase3_risk_scanner.py  test_phase3_strategies.py  test_phase8_execution.py  test_position_sizer.py  test_position_sizer_capital_base.py  test_preflight.py  test_regime_midpoint_liquidity.py  test_replay_simulator.py  test_reporter.py  test_rsi_phase_two.py  test_rsi_strategy.py  test_rsi_strategy_canonical.py  test_rsi_volatility_aggressive.py  (+13 more)
(+66 files in other folders)
