[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-tradingbot"
version = "0.1.0"
description = "Production-oriented live trading bot for Alpaca (alpaca-py only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "vardaan112" }
]
dependencies = [
    "alpaca-py>=0.42.2,<1.0.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "vaderSentiment>=3.3,<4.0",
    "pytz>=2024.1",
    "tenacity>=8.2,<10.0",
    "httpx>=0.27,<1.0",
    "psutil>=5.9,<7.0",
    "streamlit>=1.37,<2.0",
    "discord.py>=2.3,<3.0",
    "scikit-learn>=1.4,<2.0",
    "xgboost>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "freezegun>=1.5,<2.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "scikit-learn>=1.4,<2.0",
    "discord.py>=2.3,<3.0",
]

[project.scripts]
tradingbot = "main:main"
backtest-bot = "utils.backtester:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
